--- a/app/src/main/res/menu/main_nav.xml
+++ b/app/src/main/res/menu/main_nav.xml
@@ -2,8 +2,18 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:title="@string/mn_settings"
-        android:id="@+id/settings_nav"
-        android:icon="@drawable/ic_settings"
+        android:title="@string/app_name"
+        android:id="@+id/scan_qr"
+        android:icon="@android:drawable/ic_menu_add"
+        app:showAsAction="ifRoom" />
+    <item
+        android:title="@string/app_name"
+        android:id="@+id/exit"
+        android:icon="@android:drawable/ic_menu_close_clear_cancel"
+        app:showAsAction="always" />
+    <item
+        android:title="@string/app_name"
+        android:id="@+id/create_qr"
+        android:icon="@drawable/qr_code"
         app:showAsAction="always" />
 </menu>
