--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,6 +8,7 @@
         <item name="colorSecondaryVariant">@color/grey_white</item>
         <item name="colorOnSecondary">@color/grey_light</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:windowTranslucentStatus">true</item>
     </style>
 
     <style name="splash_custom_theme" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
@@ -18,6 +19,7 @@
         <item name="colorSecondaryVariant">@color/grey_white</item>
         <item name="colorOnSecondary">@color/grey_light</item>
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:windowTranslucentStatus">true</item>
     </style>
 
     <style name="Theme.NewsAgency.NoActionBar">
