--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -43,6 +43,7 @@
                 android:id="@+id/sort_list"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 android:orientation="horizontal"
                 app:layout_constraintStart_toStartOf="@+id/textView2"
                 app:layout_constraintTop_toBottomOf="@+id/textView2">
@@ -53,6 +54,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:fontFamily="serif"
+                    android:gravity="center"
                     android:text="@string/str_sort_by_site_settings"
                     android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
@@ -61,6 +63,7 @@
                     android:layout_width="120dp"
                     android:layout_height="match_parent"
                     android:fontFamily="serif"
+                    android:gravity="center"
                     android:text="@string/sort_by_date_settings"
                     android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
@@ -69,6 +72,7 @@
                     android:layout_width="120dp"
                     android:layout_height="match_parent"
                     android:fontFamily="serif"
+                    android:gravity="center"
                     android:text="@string/str_sort_by_size_settings"
                     android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
@@ -114,6 +118,7 @@
                 android:id="@+id/mode_list"
                 android:layout_width="300dp"
                 android:layout_height="50dp"
+                android:gravity="center"
                 android:orientation="horizontal"
                 app:layout_constraintStart_toStartOf="@+id/textView"
                 app:layout_constraintTop_toBottomOf="@+id/textView">
@@ -157,67 +162,32 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/card_filter">
 
-        <LinearLayout
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:hint="@string/str_enter_tags">
 
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="200dp"
-                android:layout_height="30dp"
-                android:layout_marginTop="8dp"
-                android:fontFamily="serif"
-                android:text="@string/str_tags"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                app:layout_constraintStart_toStartOf="@+id/card_filter"
-                app:layout_constraintTop_toBottomOf="@+id/card_filter" />
-
-            <EditText
-                android:id="@+id/input_tags"
-                style="@android:style/Widget.DeviceDefault.EditText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <androidx.appcompat.widget.AppCompatEditText
+                android:id="@+id/edit_txt"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
                 android:autofillHints=""
+                android:background="@color/white"
+                android:drawableEnd="@drawable/ic_cancel_24dp"
                 android:ems="10"
                 android:fontFamily="serif"
-                android:hint="@string/str_enter_tags"
-                android:inputType="textPersonName" />
-
-
-        </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/card_info"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        app:cardCornerRadius="3dp"
-        app:cardElevation="3dp"
-        app:cardMaxElevation="3dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/card_tags">
-
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="150dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginStart="8dp"
-            android:fontFamily="serif"
-            android:text="@string/str_settings_site_list"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            app:layout_constraintStart_toStartOf="@+id/card_tags"
-            app:layout_constraintTop_toBottomOf="@+id/card_tags" />
+                android:gravity="center_vertical"
+                android:inputType="textPersonName"
+                android:outlineAmbientShadowColor="@color/grey"
+                android:shadowColor="@color/white"
+                android:textAlignment="gravity"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textColorHighlight="@color/grey" />
+        </com.google.android.material.textfield.TextInputLayout>
 
     </androidx.cardview.widget.CardView>
 
@@ -231,7 +201,7 @@
         android:orientation="horizontal"
         android:paddingBottom="60dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/card_info">
+        app:layout_constraintTop_toBottomOf="@+id/card_tags">
 
     </androidx.recyclerview.widget.RecyclerView>
 
