--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -46,38 +46,49 @@
 
                 <TextView
                     android:id="@+id/date_txt"
-                    android:layout_width="260dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginLeft="8dp"
                     android:layout_marginTop="12dp"
                     android:layout_marginEnd="30dp"
-                    android:layout_marginRight="52dp"
+                    android:layout_marginRight="0dp"
                     android:layout_marginBottom="8dp"
                     android:fontFamily="serif"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                     android:textColor="@color/grey_white" />
 
-                <ImageView
-                    android:id="@+id/share_btn"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="4dp"
-                    android:background="#FFFFFF"
-                    android:contentDescription="@string/app_name"
-                    android:foregroundGravity="center"
-                    app:srcCompat="@android:drawable/ic_menu_share" />
-
-                <ImageView
-                    android:id="@+id/like_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
-                    android:layout_marginRight="8dp"
-                    android:contentDescription="@string/app_name"
-                    app:srcCompat="@android:drawable/ic_menu_add" />
+                    android:gravity="end"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/share_btn"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="4dp"
+                        android:background="#FFFFFF"
+                        android:contentDescription="@string/app_name"
+                        android:foregroundGravity="center"
+                        app:srcCompat="@drawable/ic_reply" />
+
+                    <ImageView
+                        android:id="@+id/like_btn"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
+                        android:layout_marginStart="4dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginRight="16dp"
+                        android:contentDescription="@string/app_name"
+                        app:srcCompat="@drawable/ic_favorite" />
+
+                </LinearLayout>
 
             </LinearLayout>
 
