--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="grey_light">#494949</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#DF2127</color>
 </resources>
